--- a/index.html
+++ b/index.html
@@ -291,13 +291,13 @@
     <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_amount" class="form-label">Experience</label>
-        <input type="number" class="form-control shadow-none" id="loan_amount" name="experience" placeholder="ex: 2yr">
+        <input type="number" class="form-control shadow-none" id="loan_amount" name="contact" placeholder="ex: 2yr">
       </div>
     </div>
     <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_how_long_for" class="form-label">Domain</label>
-        <input type="text" class="form-control shadow-none" id="loan_how_long_for" name="domain" placeholder="ex: Web,Data,etc..">
+        <input type="text" class="form-control shadow-none" id="loan_how_long_for" name="role" placeholder="ex: Web,Data,etc..">
       </div>
     </div>
     <div class="col-lg-12 mb-4 pb-2">
@@ -309,13 +309,13 @@
     <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_full_name" class="form-label">Full Name</label>
-        <input type="text" class="form-control shadow-none" id="loan_full_name" name="full_name">
+        <input type="text" class="form-control shadow-none" id="loan_full_name" name="name">
       </div>
     </div>
     <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_email_address" class="form-label">Email address</label>
-        <input type="email" class="form-control shadow-none" id="loan_email_address" name="email_address">
+        <input type="email" class="form-control shadow-none" id="loan_email_address" name="email">
       </div>
     </div>
     <div class="col-lg-12">
