--- a/index.html
+++ b/index.html
@@ -288,24 +288,19 @@
   <input type="hidden" name="form-name" value="contact"> <!-- This hidden input is required by Netlify -->
 
   <div class="row">
-    <div class="col-lg-6 mb-4 pb-2">
+    <!-- <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_amount" class="form-label">Experience</label>
         <input type="number" class="form-control shadow-none" id="loan_amount" name="contact" placeholder="ex: 2yr">
       </div>
-    </div>
-    <div class="col-lg-6 mb-4 pb-2">
+    </div> -->
+    <!-- <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_how_long_for" class="form-label">Domain</label>
         <input type="text" class="form-control shadow-none" id="loan_how_long_for" name="role" placeholder="ex: Web,Data,etc..">
       </div>
-    </div>
-    <div class="col-lg-12 mb-4 pb-2">
-      <div class="form-group">
-        <label for="loan_repayment" class="form-label">Message for us</label>
-        <input type="text" class="form-control shadow-none" id="loan_repayment" name="message">
-      </div>
-    </div>
+    </div> -->
+
     <div class="col-lg-6 mb-4 pb-2">
       <div class="form-group">
         <label for="loan_full_name" class="form-label">Full Name</label>
@@ -318,6 +313,13 @@
         <input type="email" class="form-control shadow-none" id="loan_email_address" name="email">
       </div>
     </div>
+    <div class="col-lg-12 mb-4 pb-2">
+      <div class="form-group">
+        <label for="loan_repayment" class="form-label">Describe yourself in 60 words</label>
+        <textarea type="text" class="form-control shadow-none" id="loan_repayment" name="message"> </textarea>
+      </div>
+    </div>
+   
     <div class="col-lg-12">
       <button type="submit" class="btn btn-primary w-100">Submit Your Application</button>
     </div>
