--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
           <div class="card bg-transparent border-0 text-center">
             <div class="card-img">
               <img loading="lazy" decoding="async" src="images/Aniket.jpg" alt="Scarlet Pena"
-                class="rounded w-100" width="300" height="332">
+                class="rounded w-100" width="300" height="320">
               <ul class="card-social list-inline">
                 <li class="list-inline-item"><a class="facebook" href="#"><i class="fab fa-facebook"></i></a>
                 </li>
@@ -976,7 +976,7 @@
             </div>
             <div class="card-body">
               <h3>Aniket Marwade</h3>
-              <p>Data Analyst</p>
+              <p>Data Analyst @Decisionattic</p>
             </div>
           </div>
         </div>
@@ -1003,8 +1003,8 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mt-4">
           <div class="card bg-transparent border-0 text-center">
             <div class="card-img">
-              <img loading="lazy" decoding="async" src="images/about/team-3.jpg" alt="Leslie Pena" class="rounded w-100"
-                width="300" height="333">
+              <img loading="lazy" decoding="async" src="images/Swastik.jpg" alt="Leslie Pena" class="rounded w-100"
+                width="300" height="320">
               <ul class="card-social list-inline">
                 <li class="list-inline-item"><a class="facebook" href="#"><i class="fab fa-facebook"></i></a>
                 </li>
@@ -1015,8 +1015,8 @@
               </ul>
             </div>
             <div class="card-body">
-              <h3>Leslie Pena</h3>
-              <p>Director</p>
+              <h3>Swastik Bhokare</h3>
+              <p>SDE1 @Naaptol</p>
             </div>
           </div>
         </div>
