--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
     </div>
   </section>
 
-  <section class="section teams pt-3">
+  <!-- <section class="section teams pt-3">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
@@ -980,7 +980,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-xl-3 col-lg-4 col-md-6 mt-4">
+         <div class="col-xl-3 col-lg-4 col-md-6 mt-4">
           <div class="card bg-transparent border-0 text-center">
             <div class="card-img">
               <img loading="lazy" decoding="async" src="images/about/team-2.jpg" alt="Claire Simmmons"
@@ -999,7 +999,7 @@
               <p>Founder</p>
             </div>
           </div>
-        </div> -->
+        </div> 
         <div class="col-xl-3 col-lg-4 col-md-6 mt-4">
           <div class="card bg-transparent border-0 text-center">
             <div class="card-img">
@@ -1042,7 +1042,8 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
+-->
 
 
   <section class="section pt-0 pb-5">
