--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 	<title>8BitGurus</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 	<meta name="description" content="This is meta description">
-	<meta name="author" content="Themefisher">
+	<meta name="author" content="8BitGurus">
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="icon" href="images/favicon.png" type="image/x-icon">
 
@@ -145,7 +145,7 @@
 </div>
 
 <section class="page-header bg-tertiary">
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-8 mx-auto text-center">
 				<h2 class="mb-3 text-capitalize">Contact Us</h2>
@@ -157,7 +157,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="has-shapes">
 		<svg class="shape shape-left text-light" viewBox="0 0 192 752" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<path d="M-30.883 0C-41.3436 36.4248 -22.7145 75.8085 4.29154 102.398C31.2976 128.987 65.8677 146.199 97.6457 166.87C129.424 187.542 160.139 213.902 172.162 249.847C193.542 313.799 149.886 378.897 129.069 443.036C97.5623 540.079 122.109 653.229 191 728.495" stroke="currentColor" stroke-miterlimit="10" />
@@ -186,7 +186,7 @@
 				<div class="section-title text-center">
 					<p class="text-primary text-uppercase fw-bold mb-3">Contact With us</p>
 					<h1>let&rsquo;s get connected</h1>
-					<p>Lorem ipsum dolor sit, consectetur adipiscing . egestas cursus pellentesque dignissim dui, congue etiam</p>
+					<p>Get in touch with the our Expert Team</p>
 				</div>
 			</div>
 			<div class="col-lg-10">
@@ -219,22 +219,23 @@
 								<div class="block mt-0">
 									<h4 class="h5">Still Have Questions?</h4>
 									<div class="content">Call Us We Will Be Happy To Help
-										<br> <a href="tel:+3301563965">+3301563965</a> 
+										<br> <a href="tel:+918446745645">+918446745645</a> 
+										<br> <a href="mailto:admin@8bitgurus.com">admin@8bitgurus.com</a>
 										<br>Monday - Friday
-										<br>9AM TO 8PM Eastern Time</div>
+										<br>9.00 AM TO 10.00 PM </div>
 								</div>
 								<div class="block mt-4">
-									<h4 class="h5">Canada Office</h4>
-									<div class="content">231 Ross Street.
-										<br>K7A 1C2.
-										<br>Smiths Falls</div>
+									<h4 class="h5">Office Address</h4>
+									<div class="content">R/o 491 Fulchur Naka Fuluchurtola.
+										<br>Gondia 441601.
+										<br>Maharashtra , India.</div>
 								</div>
-								<div class="block mt-4">
+							<!-- <div class="block mt-4">
 									<h4 class="h5">UK Office</h4>
 									<div class="content">57 Folkestone Road.
 										<br>AB54 5XQ,
 										<br>Winston</div>
-								</div>
+								</div> -->
 								<div class="block">
 									<ul class="list-unstyled list-inline my-4 social-icons">
 										<li class="list-inline-item me-3"><a title="Explorer Facebook Profile" class="text-black" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
