--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
             </div>
           </div>
           <div class="cardss item">
-            <div class="card-item">
+            <!-- <div class="card-item">
               <div class="card-image">
                 <img src="images/case_studies.png" alt="Girl in a jacket" width="500" height="600">
 
@@ -794,7 +794,42 @@
                 <h2 class="card-title">Coming Soon :Introduction to Case Studies</h2>
                 <p class="card-intro"></p>
               </div>
-            </div>
+            </div> -->
+            <section class="py-6">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-xxl-4 col-xl-6 col-lg-12">
+                          <div class="card mb-4 mb-xl-0 card-hover border">
+                              <a href="#!">
+                                  <img src="../assets/images/education/edu-webinar-1.jpg" alt="webinar-1" class="img-fluid w-100 rounded-top-3">
+                              </a>
+                              <div class="card-body">
+                                  <h3 class="mb-4 text-truncate">
+                                      <a href="#!" class="text-inherit">Education Edition Deployment And Set Up</a>
+                                  </h3>
+                                  <div class="mb-4">
+                                      <div class="mb-3 lh-1">
+                                          <span class="me-1">
+                                              <i class="bi bi-calendar-check"></i>
+                                          </span>
+                                          <span>Thu, November 10, 2023</span>
+                                      </div>
+                                      <div class="lh-1">
+                                          <span class="align-text-top me-1">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                                              <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                                              <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+                                            </svg>                        </span>
+                                          <span>6:00 PM – 8:00 PM GMT</span>
+                                      </div>
+                                  </div>
+                                  <a href="#!" class="btn btn-light-primary text-primary">Register Now</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              </section>
           </div>
           
          <!-- <div class="cardss item">
