--- a/index.html
+++ b/index.html
@@ -773,11 +773,11 @@
           <div class="cardss item">
             <div class="card-item">
               <div class="card-image">
-                <img src="images/SQL_Free_Course.png" alt="Girl in a jacket" width="500" height="600">
+                <img src="images/banner 1/Navy Creative How Artificial Intelligence Youtube Thumbnail.png" alt="Girl in a jacket" width="500" height="600">
 
               </div>
               <div class="card-info">
-                <h2 class="card-title">Live : SQL Course For Data Enthusiasts.</h2>
+                <h2 class="card-title">SQL Course For Data Enthusiasts.</h2>
                 <p class="card-intro"></p>
               </div>
             </div>
