--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
   </section> 
 -->
 
-<section class="mt-4 pb-lg-14 pb-6">
+<!-- <section class="mt-4 pb-lg-14 pb-6">
   <div class="container">
     <div class="row">
       <div class="col-xl-6 offset-xl-3 col-md-12 col-12">
@@ -1177,7 +1177,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
   <section class="section pt-0 pb-5">
     <div class="container">
